--- a/BuilderForm.API/appsettings.Development.json
+++ b/BuilderForm.API/appsettings.Development.json
@@ -1,10 +1,13 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+	"ConnectionStrings": {
+		"FormBuilderConnectionString": ""
+	},
+	"Logging": {
+		"IncludeScopes": false,
+		"LogLevel": {
+			"Default": "Debug",
+			"System": "Information",
+			"Microsoft": "Information"
+		}
+	}
 }
