--- a/BuilderForm.API/BuilderForm.API.csproj
+++ b/BuilderForm.API/BuilderForm.API.csproj
@@ -10,10 +10,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BuilderForm.Repository\BuilderForm.Repository.csproj" />
   </ItemGroup>
 
 </Project>
