--- a/BuilderForm.DataService/BuilderForm.DataService.csproj
+++ b/BuilderForm.DataService/BuilderForm.DataService.csproj
@@ -9,6 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BuilderForm.Data\BuilderForm.Data.csproj" />
+    <ProjectReference Include="..\BuilderForm.Repository\BuilderForm.Repository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
       <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencyinjection.abstractions\2.0.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
     </Reference>
