--- a/BuilderForm.Repository/BuilderForm.Repository.csproj
+++ b/BuilderForm.Repository/BuilderForm.Repository.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BuilderForm.Data\BuilderForm.Data.csproj" />
   </ItemGroup>
 
