Added Repository and DataService into DI Added ConnectionString

--- a/BuilderForm.API/appsettings.Development.json
+++ b/BuilderForm.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
 	"ConnectionStrings": {
-		"FormBuilderConnectionString": ""
+		"FormBuilderConnectionString": "User ID=postgres;Password=12241224;Host=localhost;Port=5432;Database=formbuilderdb;"
 	},
 	"Logging": {
 		"IncludeScopes": false,
