--- a/BuilderForm.API/BuilderForm.API.csproj
+++ b/BuilderForm.API/BuilderForm.API.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
